kajit/tests/snapshots/corpus__generated_ra_mir_postcard_nested_struct_x86_64.snap
---
source: kajit/tests/corpus.rs
expression: ra_text
---
ra_func @0 { ; entry: b0
  block b0: ; insts: 18
    bounds_check(1)
    v1:gpr = const(0x7f)
    v3:gpr = const(0x80)
    v5:gpr = const(0x0)
    v37:gpr = const(0x0)
    v39:gpr = const(0x20)
    v41:gpr = const(0x0)
    v44:gpr = const(0x7f)
    v46:gpr = const(0x80)
    v48:gpr = const(0x0)
    v80:gpr = const(0x0)
    v82:gpr = const(0x20)
    v84:gpr = const(0x0)
    v87:gpr = const(0x18)
    v0:gpr = read_bytes(1)
    v2:gpr = And v0:gpr, v1:gpr
    v4:gpr = And v0:gpr, v3:gpr
    v6:gpr = CmpNe v4:gpr, v5:gpr
    term: branch_if_zero v6 -> b2, fallthrough b1 ; uses: [v6]
    succs: b2 [v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] b1 [v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] ; count: 2
  block b1 [params: v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] (preds: b0): ; insts: 0
    term: branch b3 ; uses: []
    succs: b3 [v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] ; count: 1
  block b2 [params: v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] (preds: b0): ; insts: 4
    v7:gpr = const(0x4)
    v8:gpr = const(0x0)
    v33:gpr = copy v2:gpr
    v36:gpr = copy v8:gpr
    term: branch b6 ; uses: []
    succs: b6 [v33, v8, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] ; count: 1
  block b3 [params: v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] (preds: b1): ; insts: 12
    v9:gpr = const(0x7)
    v10:gpr = const(0x4)
    v11:gpr = const(0x1)
    v13:gpr = const(0x7f)
    v17:gpr = const(0x7)
    v19:gpr = const(0x1)
    v21:gpr = const(0x80)
    v23:gpr = const(0x0)
    v25:gpr = const(0x0)
    v177:gpr = copy v2:gpr
    v178:gpr = copy v9:gpr
    v179:gpr = copy v10:gpr
    term: branch b4 ; uses: []
    succs: b4 [v13, v17, v19, v21, v23, v25, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v177, v178, v179] ; count: 1
  block b4 [params: v13, v17, v19, v21, v23, v25, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v177, v178, v179] (preds: b3, b4): ; insts: 16
    bounds_check(1)
    v18:gpr = Add v178:gpr, v17:gpr
    v20:gpr = Sub v179:gpr, v19:gpr
    v12:gpr = read_bytes(1)
    v26:gpr = CmpNe v20:gpr, v25:gpr
    v14:gpr = And v12:gpr, v13:gpr
    v22:gpr = And v12:gpr, v21:gpr
    v15:gpr = Shl v14:gpr, v178:gpr/hw1
    v24:gpr = CmpNe v22:gpr, v23:gpr
    v16:gpr = Or v177:gpr, v15:gpr
    v27:gpr = And v24:gpr, v26:gpr
    v177:gpr = copy v16:gpr
    v178:gpr = copy v18:gpr
    v179:gpr = copy v20:gpr
    v180:gpr = copy v14:gpr
    v181:gpr = copy v24:gpr
    term: branch_if v27 -> b4, fallthrough b5 ; uses: [v27]
    succs: b4 [v13, v17, v19, v21, v23, v25, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v177, v178, v179] b5 [v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v177, v181] ; count: 2
  block b5 [params: v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v177, v181] (preds: b4): ; insts: 2
    v33:gpr = copy v177:gpr
    v36:gpr = copy v181:gpr
    term: branch b6 ; uses: []
    succs: b6 [v33, v36, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] ; count: 1
  block b6 [params: v33, v36, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87] (preds: b2, b5): ; insts: 2
    v38:gpr = CmpNe v36:gpr, v37:gpr
    v40:gpr = Shr v33:gpr, v39:gpr/hw1
    term: branch_if_zero v38 -> b8, fallthrough b7 ; uses: [v38]
    succs: b8 [v33, v40, v41, v44, v46, v48, v80, v82, v84, v87] b7 ; count: 2
  block b7 (preds: b6): ; insts: 0
    term: branch b9 ; uses: []
    succs: b9 ; count: 1
  block b8 [params: v33, v40, v41, v44, v46, v48, v80, v82, v84, v87] (preds: b6): ; insts: 0
    term: branch b10 ; uses: []
    succs: b10 [v33, v40, v41, v44, v46, v48, v80, v82, v84, v87] ; count: 1
  block b9 (preds: b7): ; insts: 0
    term: error_exit(InvalidVarint) ; uses: []
    succs: (none)
  block b10 [params: v33, v40, v41, v44, v46, v48, v80, v82, v84, v87] (preds: b8): ; insts: 1
    v42:gpr = CmpNe v40:gpr, v41:gpr
    term: branch_if_zero v42 -> b12, fallthrough b11 ; uses: [v42]
    succs: b12 [v33, v44, v46, v48, v80, v82, v84, v87] b11 ; count: 2
  block b11 (preds: b10): ; insts: 0
    term: branch b13 ; uses: []
    succs: b13 ; count: 1
  block b12 [params: v33, v44, v46, v48, v80, v82, v84, v87] (preds: b10): ; insts: 0
    term: branch b14 ; uses: []
    succs: b14 [v33, v44, v46, v48, v80, v82, v84, v87] ; count: 1
  block b13 (preds: b11): ; insts: 0
    term: error_exit(NumberOutOfRange) ; uses: []
    succs: (none)
  block b14 [params: v33, v44, v46, v48, v80, v82, v84, v87] (preds: b12): ; insts: 6
    call_intrinsic(0x<ptr>, fo=0) v33:gpr !gpr,simd
    bounds_check(1)
    v43:gpr = read_bytes(1)
    v45:gpr = And v43:gpr, v44:gpr
    v47:gpr = And v43:gpr, v46:gpr
    v49:gpr = CmpNe v47:gpr, v48:gpr
    term: branch_if_zero v49 -> b16, fallthrough b15 ; uses: [v49]
    succs: b16 [v45, v80, v82, v84, v87] b15 [v45, v80, v82, v84, v87] ; count: 2
  block b15 [params: v45, v80, v82, v84, v87] (preds: b14): ; insts: 0
    term: branch b17 ; uses: []
    succs: b17 [v45, v80, v82, v84, v87] ; count: 1
  block b16 [params: v45, v80, v82, v84, v87] (preds: b14): ; insts: 4
    v50:gpr = const(0x4)
    v51:gpr = const(0x0)
    v76:gpr = copy v45:gpr
    v79:gpr = copy v51:gpr
    term: branch b20 ; uses: []
    succs: b20 [v76, v51, v80, v82, v84, v87] ; count: 1
  block b17 [params: v45, v80, v82, v84, v87] (preds: b15): ; insts: 12
    v52:gpr = const(0x7)
    v53:gpr = const(0x4)
    v54:gpr = const(0x1)
    v56:gpr = const(0x7f)
    v60:gpr = const(0x7)
    v62:gpr = const(0x1)
    v64:gpr = const(0x80)
    v66:gpr = const(0x0)
    v68:gpr = const(0x0)
    v184:gpr = copy v45:gpr
    v185:gpr = copy v52:gpr
    v186:gpr = copy v53:gpr
    term: branch b18 ; uses: []
    succs: b18 [v56, v60, v62, v64, v66, v68, v80, v82, v84, v87, v184, v185, v186] ; count: 1
  block b18 [params: v56, v60, v62, v64, v66, v68, v80, v82, v84, v87, v184, v185, v186] (preds: b17, b18): ; insts: 16
    bounds_check(1)
    v61:gpr = Add v185:gpr, v60:gpr
    v63:gpr = Sub v186:gpr, v62:gpr
    v55:gpr = read_bytes(1)
    v69:gpr = CmpNe v63:gpr, v68:gpr
    v57:gpr = And v55:gpr, v56:gpr
    v65:gpr = And v55:gpr, v64:gpr
    v58:gpr = Shl v57:gpr, v185:gpr/hw1
    v67:gpr = CmpNe v65:gpr, v66:gpr
    v59:gpr = Or v184:gpr, v58:gpr
    v70:gpr = And v67:gpr, v69:gpr
    v184:gpr = copy v59:gpr
    v185:gpr = copy v61:gpr
    v186:gpr = copy v63:gpr
    v187:gpr = copy v57:gpr
    v188:gpr = copy v67:gpr
    term: branch_if v70 -> b18, fallthrough b19 ; uses: [v70]
    succs: b18 [v56, v60, v62, v64, v66, v68, v80, v82, v84, v87, v184, v185, v186] b19 [v80, v82, v84, v87, v184, v188] ; count: 2
  block b19 [params: v80, v82, v84, v87, v184, v188] (preds: b18): ; insts: 2
    v76:gpr = copy v184:gpr
    v79:gpr = copy v188:gpr
    term: branch b20 ; uses: []
    succs: b20 [v76, v79, v80, v82, v84, v87] ; count: 1
  block b20 [params: v76, v79, v80, v82, v84, v87] (preds: b16, b19): ; insts: 2
    v81:gpr = CmpNe v79:gpr, v80:gpr
    v83:gpr = Shr v76:gpr, v82:gpr/hw1
    term: branch_if_zero v81 -> b22, fallthrough b21 ; uses: [v81]
    succs: b22 [v76, v83, v84, v87] b21 ; count: 2
  block b21 (preds: b20): ; insts: 0
    term: branch b23 ; uses: []
    succs: b23 ; count: 1
  block b22 [params: v76, v83, v84, v87] (preds: b20): ; insts: 0
    term: branch b24 ; uses: []
    succs: b24 [v76, v83, v84, v87] ; count: 1
  block b23 (preds: b21): ; insts: 0
    term: error_exit(InvalidVarint) ; uses: []
    succs: (none)
  block b24 [params: v76, v83, v84, v87] (preds: b22): ; insts: 1
    v85:gpr = CmpNe v83:gpr, v84:gpr
    term: branch_if_zero v85 -> b26, fallthrough b25 ; uses: [v85]
    succs: b26 [v76, v87] b25 ; count: 2
  block b25 (preds: b24): ; insts: 0
    term: branch b27 ; uses: []
    succs: b27 ; count: 1
  block b26 [params: v76, v87] (preds: b24): ; insts: 0
    term: branch b28 ; uses: []
    succs: b28 [v76, v87] ; count: 1
  block b27 (preds: b25): ; insts: 0
    term: error_exit(NumberOutOfRange) ; uses: []
    succs: (none)
  block b28 [params: v76, v87] (preds: b26): ; insts: 6
    store([56:W4]) v76:gpr
    v86:gpr = save_out_ptr
    v88:gpr = Add v86:gpr, v87:gpr
    set_out_ptr v88:gpr
    call_lambda(@1) !gpr,simd
    set_out_ptr v86:gpr
    term: return ; uses: []
    succs: (none)
}
ra_func @1 { ; entry: b0
  block b0: ; insts: 17
    bounds_check(1)
    v90:gpr = const(0x7f)
    v92:gpr = const(0x80)
    v94:gpr = const(0x0)
    v126:gpr = const(0x0)
    v128:gpr = const(0x20)
    v130:gpr = const(0x0)
    v133:gpr = const(0x7f)
    v135:gpr = const(0x80)
    v137:gpr = const(0x0)
    v169:gpr = const(0x0)
    v171:gpr = const(0x20)
    v173:gpr = const(0x0)
    v89:gpr = read_bytes(1)
    v91:gpr = And v89:gpr, v90:gpr
    v93:gpr = And v89:gpr, v92:gpr
    v95:gpr = CmpNe v93:gpr, v94:gpr
    term: branch_if_zero v95 -> b2, fallthrough b1 ; uses: [v95]
    succs: b2 [v91, v126, v128, v130, v133, v135, v137, v169, v171, v173] b1 [v91, v126, v128, v130, v133, v135, v137, v169, v171, v173] ; count: 2
  block b1 [params: v91, v126, v128, v130, v133, v135, v137, v169, v171, v173] (preds: b0): ; insts: 0
    term: branch b3 ; uses: []
    succs: b3 [v91, v126, v128, v130, v133, v135, v137, v169, v171, v173] ; count: 1
  block b2 [params: v91, v126, v128, v130, v133, v135, v137, v169, v171, v173] (preds: b0): ; insts: 4
    v96:gpr = const(0x4)
    v97:gpr = const(0x0)
    v122:gpr = copy v91:gpr
    v125:gpr = copy v97:gpr
    term: branch b6 ; uses: []
    succs: b6 [v122, v97, v126, v128, v130, v133, v135, v137, v169, v171, v173] ; count: 1
  block b3 [params: v91, v126, v128, v130, v133, v135, v137, v169, v171, v173] (preds: b1): ; insts: 12
    v98:gpr = const(0x7)
    v99:gpr = const(0x4)
    v100:gpr = const(0x1)
    v102:gpr = const(0x7f)
    v106:gpr = const(0x7)
    v108:gpr = const(0x1)
    v110:gpr = const(0x80)
    v112:gpr = const(0x0)
    v114:gpr = const(0x0)
    v191:gpr = copy v91:gpr
    v192:gpr = copy v98:gpr
    v193:gpr = copy v99:gpr
    term: branch b4 ; uses: []
    succs: b4 [v102, v106, v108, v110, v112, v114, v126, v128, v130, v133, v135, v137, v169, v171, v173, v191, v192, v193] ; count: 1
  block b4 [params: v102, v106, v108, v110, v112, v114, v126, v128, v130, v133, v135, v137, v169, v171, v173, v191, v192, v193] (preds: b3, b4): ; insts: 16
    bounds_check(1)
    v107:gpr = Add v192:gpr, v106:gpr
    v109:gpr = Sub v193:gpr, v108:gpr
    v101:gpr = read_bytes(1)
    v115:gpr = CmpNe v109:gpr, v114:gpr
    v103:gpr = And v101:gpr, v102:gpr
    v111:gpr = And v101:gpr, v110:gpr
    v104:gpr = Shl v103:gpr, v192:gpr/hw1
    v113:gpr = CmpNe v111:gpr, v112:gpr
    v105:gpr = Or v191:gpr, v104:gpr
    v116:gpr = And v113:gpr, v115:gpr
    v191:gpr = copy v105:gpr
    v192:gpr = copy v107:gpr
    v193:gpr = copy v109:gpr
    v194:gpr = copy v103:gpr
    v195:gpr = copy v113:gpr
    term: branch_if v116 -> b4, fallthrough b5 ; uses: [v116]
    succs: b4 [v102, v106, v108, v110, v112, v114, v126, v128, v130, v133, v135, v137, v169, v171, v173, v191, v192, v193] b5 [v126, v128, v130, v133, v135, v137, v169, v171, v173, v191, v195] ; count: 2
  block b5 [params: v126, v128, v130, v133, v135, v137, v169, v171, v173, v191, v195] (preds: b4): ; insts: 2
    v122:gpr = copy v191:gpr
    v125:gpr = copy v195:gpr
    term: branch b6 ; uses: []
    succs: b6 [v122, v125, v126, v128, v130, v133, v135, v137, v169, v171, v173] ; count: 1
  block b6 [params: v122, v125, v126, v128, v130, v133, v135, v137, v169, v171, v173] (preds: b2, b5): ; insts: 2
    v127:gpr = CmpNe v125:gpr, v126:gpr
    v129:gpr = Shr v122:gpr, v128:gpr/hw1
    term: branch_if_zero v127 -> b8, fallthrough b7 ; uses: [v127]
    succs: b8 [v122, v129, v130, v133, v135, v137, v169, v171, v173] b7 ; count: 2
  block b7 (preds: b6): ; insts: 0
    term: branch b9 ; uses: []
    succs: b9 ; count: 1
  block b8 [params: v122, v129, v130, v133, v135, v137, v169, v171, v173] (preds: b6): ; insts: 0
    term: branch b10 ; uses: []
    succs: b10 [v122, v129, v130, v133, v135, v137, v169, v171, v173] ; count: 1
  block b9 (preds: b7): ; insts: 0
    term: error_exit(InvalidVarint) ; uses: []
    succs: (none)
  block b10 [params: v122, v129, v130, v133, v135, v137, v169, v171, v173] (preds: b8): ; insts: 1
    v131:gpr = CmpNe v129:gpr, v130:gpr
    term: branch_if_zero v131 -> b12, fallthrough b11 ; uses: [v131]
    succs: b12 [v122, v133, v135, v137, v169, v171, v173] b11 ; count: 2
  block b11 (preds: b10): ; insts: 0
    term: branch b13 ; uses: []
    succs: b13 ; count: 1
  block b12 [params: v122, v133, v135, v137, v169, v171, v173] (preds: b10): ; insts: 0
    term: branch b14 ; uses: []
    succs: b14 [v122, v133, v135, v137, v169, v171, v173] ; count: 1
  block b13 (preds: b11): ; insts: 0
    term: error_exit(NumberOutOfRange) ; uses: []
    succs: (none)
  block b14 [params: v122, v133, v135, v137, v169, v171, v173] (preds: b12): ; insts: 6
    call_intrinsic(0x<ptr>, fo=0) v122:gpr !gpr,simd
    bounds_check(1)
    v132:gpr = read_bytes(1)
    v134:gpr = And v132:gpr, v133:gpr
    v136:gpr = And v132:gpr, v135:gpr
    v138:gpr = CmpNe v136:gpr, v137:gpr
    term: branch_if_zero v138 -> b16, fallthrough b15 ; uses: [v138]
    succs: b16 [v134, v169, v171, v173] b15 [v134, v169, v171, v173] ; count: 2
  block b15 [params: v134, v169, v171, v173] (preds: b14): ; insts: 0
    term: branch b17 ; uses: []
    succs: b17 [v134, v169, v171, v173] ; count: 1
  block b16 [params: v134, v169, v171, v173] (preds: b14): ; insts: 4
    v139:gpr = const(0x4)
    v140:gpr = const(0x0)
    v165:gpr = copy v134:gpr
    v168:gpr = copy v140:gpr
    term: branch b20 ; uses: []
    succs: b20 [v165, v140, v169, v171, v173] ; count: 1
  block b17 [params: v134, v169, v171, v173] (preds: b15): ; insts: 12
    v141:gpr = const(0x7)
    v142:gpr = const(0x4)
    v143:gpr = const(0x1)
    v145:gpr = const(0x7f)
    v149:gpr = const(0x7)
    v151:gpr = const(0x1)
    v153:gpr = const(0x80)
    v155:gpr = const(0x0)
    v157:gpr = const(0x0)
    v198:gpr = copy v134:gpr
    v199:gpr = copy v141:gpr
    v200:gpr = copy v142:gpr
    term: branch b18 ; uses: []
    succs: b18 [v145, v149, v151, v153, v155, v157, v169, v171, v173, v198, v199, v200] ; count: 1
  block b18 [params: v145, v149, v151, v153, v155, v157, v169, v171, v173, v198, v199, v200] (preds: b17, b18): ; insts: 16
    bounds_check(1)
    v150:gpr = Add v199:gpr, v149:gpr
    v152:gpr = Sub v200:gpr, v151:gpr
    v144:gpr = read_bytes(1)
    v158:gpr = CmpNe v152:gpr, v157:gpr
    v146:gpr = And v144:gpr, v145:gpr
    v154:gpr = And v144:gpr, v153:gpr
    v147:gpr = Shl v146:gpr, v199:gpr/hw1
    v156:gpr = CmpNe v154:gpr, v155:gpr
    v148:gpr = Or v198:gpr, v147:gpr
    v159:gpr = And v156:gpr, v158:gpr
    v198:gpr = copy v148:gpr
    v199:gpr = copy v150:gpr
    v200:gpr = copy v152:gpr
    v201:gpr = copy v146:gpr
    v202:gpr = copy v156:gpr
    term: branch_if v159 -> b18, fallthrough b19 ; uses: [v159]
    succs: b18 [v145, v149, v151, v153, v155, v157, v169, v171, v173, v198, v199, v200] b19 [v169, v171, v173, v198, v202] ; count: 2
  block b19 [params: v169, v171, v173, v198, v202] (preds: b18): ; insts: 2
    v165:gpr = copy v198:gpr
    v168:gpr = copy v202:gpr
    term: branch b20 ; uses: []
    succs: b20 [v165, v168, v169, v171, v173] ; count: 1
  block b20 [params: v165, v168, v169, v171, v173] (preds: b16, b19): ; insts: 2
    v170:gpr = CmpNe v168:gpr, v169:gpr
    v172:gpr = Shr v165:gpr, v171:gpr/hw1
    term: branch_if_zero v170 -> b22, fallthrough b21 ; uses: [v170]
    succs: b22 [v165, v172, v173] b21 ; count: 2
  block b21 (preds: b20): ; insts: 0
    term: branch b23 ; uses: []
    succs: b23 ; count: 1
  block b22 [params: v165, v172, v173] (preds: b20): ; insts: 0
    term: branch b24 ; uses: []
    succs: b24 [v165, v172, v173] ; count: 1
  block b23 (preds: b21): ; insts: 0
    term: error_exit(InvalidVarint) ; uses: []
    succs: (none)
  block b24 [params: v165, v172, v173] (preds: b22): ; insts: 1
    v174:gpr = CmpNe v172:gpr, v173:gpr
    term: branch_if_zero v174 -> b26, fallthrough b25 ; uses: [v174]
    succs: b26 [v165] b25 ; count: 2
  block b25 (preds: b24): ; insts: 0
    term: branch b27 ; uses: []
    succs: b27 ; count: 1
  block b26 [params: v165] (preds: b24): ; insts: 0
    term: branch b28 ; uses: []
    succs: b28 [v165] ; count: 1
  block b27 (preds: b25): ; insts: 0
    term: error_exit(NumberOutOfRange) ; uses: []
    succs: (none)
  block b28 [params: v165] (preds: b26): ; insts: 1
    store([24:W4]) v165:gpr
    term: return ; uses: []
    succs: (none)
}
